<resources>
    <string name="app_name">TODO List</string>
    <string name="tab_text_1">TODO</string>
    <string name="tab_text_2">Deadline</string>
    <string name="tab_text_3">Task Done</string>

    <!--Common field string-->
    <string name="date_label">10th September, 2017</string>

    <!--Option Menu String-->
    <string name="filter_work">WORK</string>
    <string name="filter_family">FAMILY</string>
    <string name="filter_friends">FRIENDS</string>
    <string name="filter_misc">MISC</string>
    <string name="filter_none">SHOW ALL</string>
    <string name="menu_about">About</string>
    <string name="clear_done_task">Clear Done Tasks</string>
    <!--TODO fragment string -->


    <!--Edit Task string-->
    <string name="edit_task_label">Edit Task</string>
    <string name="edit_name_label">Name</string>
    <string name="edit_desc_label">Description</string>
    <string name="edit_due_date_label">Due Date</string>
    <string name="edit_status_label">Status</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

</resources>
