<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.keith.test.editTask">


    <TextView
        android:id="@+id/edit_task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_task_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/edit_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_name" />

    <TextView
        android:id="@+id/edit_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_desc_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_desc" />

    <TextView
        android:id="@+id/edit_due_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/edit_due_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_task_date_picker" />

    <TextView
        android:id="@+id/edit_status_label"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_status_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_radio_group" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_task_label" />

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:visibility="gone"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="201dp" />

    <RadioGroup
        android:id="@+id/edit_radio_group"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_task_cat">

        <RadioButton
            android:id="@+id/edit_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Active"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="265dp" />

        <RadioButton
            android:id="@+id/edit_inactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Inactive"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="265dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/edit_task_cat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_task_cat" />

    <Spinner
        android:id="@+id/edit_task_cat"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_task_date_picker" />

    <EditText
        android:id="@+id/edit_task_date_picker"
        android:layout_width="152dp"
        android:layout_height="46dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_desc" />

    <ImageButton
        android:id="@+id/edit_datePicker"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/edit_task_date_picker"
        app:layout_constraintTop_toTopOf="@+id/edit_task_date_picker"
        app:srcCompat="@android:drawable/ic_menu_today" />


</android.support.constraint.ConstraintLayout>
